--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,8 @@
 /***************************
 1. Automatic Navigation java
 ***************************/
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 .caret-up {
   width: 0;
@@ -252,5 +254,40 @@ input.form-control {
     padding: 2px;
     transition: .75s;
     background: #ff8500;
+  }
+}
+
+// form_sign_up
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+// error mes
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
   }
 }
