--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -22,25 +22,18 @@
         <span class="span-or">or</span>
       </div>
 
-      <form role="form">
-        <div class="form-group">
-          <label for="inputUsernameEmail">Username or email</label>
-          <input type="text" class="form-control" id="inputUsernameEmail">
-        </div>
-        <div class="form-group">
-          <a class="pull-right" href="#">Forgot password?</a>
-          <label for="inputPassword">Password</label>
-          <input type="password" class="form-control" id="inputPassword">
-        </div>
-        <div class="checkbox pull-right">
-          <label>
-            <input type="checkbox">
-            Remember me </label>
-        </div>
-        <button type="submit" class="btn btn btn-primary">
-          Log In
-        </button>
-      </form>
+      <div class="row">
+        <%= form_for(:session, url:login_path) do |f| %>
+           <%= f.label :email %>
+           <%= f.email_field :email, class: 'form-control' %>
+
+           <%= f.label :password %>
+           <%= f.password_field :password, class: 'form-control' %>
+
+           <%= f.submit 'login', class: 'btn btn-primary'%>
+        <% end %>
+        <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+      </div>
     
     </div>
     
