--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,92 @@
 <div class="top_nav">
   <div class="nav_menu">
     <nav>
-    	<div class="footer-section">
+    	<div class="Features-section paddingTB60 bg-dgrey ">
+			<div class="container">
+				<div class="row text-center">
+					<P>BRANCH.COM.VN</P>
+					<h3>Chọn Món Hôm Nay, Nhận Ngay Ưu Đãi</h3>
+				</div>
+				<br>
+				<div class="row text-center ">
+					<div class="col-sm-6 col-md-4">
+						<div class="feature-box">
+							<span class="glyphicon glyphicon-gift icon"></span>
+							<h4>Ưu đãi cho bạn</h4>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Khuyến mãi hằng ngày và xu hướng mới trên Twitter, Facebook và Instagram.</p>
+						      </div>
+							</div>
+						</div>
+					</div> <!-- End Col -->	
+					<div class="col-sm-6 col-md-4">
+						<div class="feature-box">
+							<span class="glyphicon glyphicon-certificate icon"></span>
+							<h4>Đảm bảo với bạn</h4>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Không tính phí dịch vụ</p>
+						      </div>
+							</div>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Chất lượng dịch vụ tuyệt vời</p>
+						      </div>
+							</div>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Giá đảm bảo: thanh toán với giá bằng với giá tại nhà hàng</p>
+						      </div>
+							</div>
+						</div>
+					</div> <!-- End Col -->	
+					<div class="col-sm-6 col-md-4">
+						<div class="feature-box">
+							<span class="glyphicon glyphicon-thumbs-up icon"></span>
+							<h4>Lợi ích cho bạn</h4>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Thanh toán online hoặc bằng tiền mặt</p>
+						      </div>
+							</div>
+							<div class="row text-center">
+						      <div class="col-md-1">
+						        <span class="glyphicon glyphicon-ok"></span>
+						      </div>
+						      <div class="col-md-11">
+							    <p>Đặt món mọi lúc mọi nơi bằng ứng dụng di động</p>
+						      </div>
+							</div>
+						</div>
+					</div> <!-- End Col -->	
+				</div>
+			</div>
+		</div>
+		<div class="footer-section">
 		    <div class="footer-top">
 			    <div class="container">
 					<div class="row text-center">
 						<div class="col-md-12">
-						    <h2>Learn almost anything  </h2>
+						    <h2>Chọn Món Theo Cách Của Bạn </h2>
 						</div>
 						<div class="col-md-12">
-					    Stay in the loop on all upcoming promotions, discounts and latest updates
+					    Bạn đang khó khăn trong việc lựa chọn Món ăn đúng sở thích, có giao hàng tận nơi ? Hay Bạn đang tìm Gilf E.Voucher để tặng người thân, bạn bè ? Hoặc là Bạn đang tìm một buổi tối lãng mạn tại nhà hàng sang trọng ? Hãy để Chonmon.vn giúp Bạn làm điều đó nhé, Chỉ bằng 1 cú CLICK.
 					    </div>
 					</div>
 			    </div>
@@ -58,7 +135,7 @@
 					<div class="row">
 						<div class="col-sm-6 ">
 							<div class="copyright-text">
-								<p>CopyRight © 2017 Digital All Rights Reserved</p>
+								<p>CopyRight © 2018 </p>
 							</div>
 						</div> <!-- End Col -->
 						<div class="col-sm-6 ">
