--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages', object: @user %>
   <!-- render option, render patial -->
-  <%= f.label :avatar, class: "col-md-4" %>
-  <%= f.file_field :avatar %>
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar, class: 'form-control'%>
   
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
@@ -16,5 +16,5 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <%= f.submit value: 'Save', class: "btn btn-primary" %>
 <% end %>
