--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,9 +5,9 @@
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
 
-    <div class="avatar_edit">
+    <!-- <div class="avatar_edit">
       <%= load_avatar @user %>
       <a href="http://gravatar.com/emails" target="_blank">change</a>
-    </div>
+    </div> -->
   </div>
 </div>
