--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -555,3 +555,14 @@ img {
   }
 }
 
+.footer-admin {
+   width: 100%;
+   height: 70px;
+   background-color: #555753;
+   color: white;
+}
+
+.icon-admin-user {
+  font-size: 15px;
+  padding-right: 9px;
+}
