--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,1 +1,34 @@
-<h1>admin page</h1>
+<h3>admin page</h3>
+
+<div class="row">
+    <div class="col-md-10">
+        <form method="get" action="/" class="form-inline" >
+            <div class="col-md-1">
+              <%= label_tag :branch, t("name") %>
+            </div>
+            <input name="loc" class="span5 col-md-5 form-control" type="text"  placeholder="name">
+            <button type="submit" class="btn btn-primary">search</button>
+        </form>
+    </div>
+    <div class="col col-md-2 text-right">
+       <button type="button" class="btn btn-sm btn-primary btn-create">Create New</button>
+    </div>
+</div>
+<hr>
+<div class="x-panel tile overflow-hidden">
+  <div class="x-content">
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th class="col-md-3 col-sm-3 col-xs-3"><%= t "vendors.name" %></th>
+          <th class="col-md-6 col-sm-6 col-xs-6"><%= t "vendors.description" %></th>
+          <th class="text-center col-md-2 col-sm-2 col-xs-2" ><%= t ".action" %></th>
+        </tr>
+      </thead>
+      <tbody>
+        
+      </tbody>
+    </table>
+  </div>
+</div>
+
