--- a/app/views/layouts/_admin_footer.html.erb
+++ b/app/views/layouts/_admin_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="top_nav">
   <div class="nav_menu">
     <nav>
-	  <footer class="pull-left footer">
+	  <footer class="pull-left footer-admin">
 		<p class="col-md-12">
 			<hr class="divider">
 			Copyright &COPY; 2015 <a href="http://www.pingpong-labs.com">Gravitano</a>
