--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,45 +27,35 @@
 					<!-- Main Menu -->
 					<div class="side-menu-container">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-plane"></span> Active Link</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-cloud"></span> Link</a></li>
-
+							<!-- admin  -->
+							<li class="active"><a href="#"><span class="glyphicon glyphicon-signal"></span> Dashboard</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-tasks"></span>Danh Mục Món Ăn</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-cutlery"></span>Món Ăn</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span>Đơn Hàng</a></li>
 							<!-- Dropdown-->
 							<li class="panel panel-default" id="dropdown">
 								<a data-toggle="collapse" href="#dropdown-lvl1">
-									<span class="glyphicon glyphicon-user"></span> Sub Level <span class="caret"></span>
+									<span class="fa fa-users fa-2x icon-admin-user"></span>Người Dùng<span class="caret"></span>
 								</a>
 
 								<!-- Dropdown level 1 -->
 								<div id="dropdown-lvl1" class="panel-collapse collapse">
 									<div class="panel-body">
 										<ul class="nav navbar-nav">
-											<li><a href="#">Link</a></li>
-											<li><a href="#">Link</a></li>
-											<li><a href="#">Link</a></li>
-
-											<!-- Dropdown level 2 -->
-											<li class="panel panel-default" id="dropdown">
-												<a data-toggle="collapse" href="#dropdown-lvl2">
-													<span class="glyphicon glyphicon-off"></span> Sub Level <span class="caret"></span>
-												</a>
-												<div id="dropdown-lvl2" class="panel-collapse collapse">
-													<div class="panel-body">
-														<ul class="nav navbar-nav">
-															<li><a href="#">Link</a></li>
-															<li><a href="#">Link</a></li>
-															<li><a href="#">Link</a></li>
-														</ul>
-													</div>
-												</div>
-											</li>
+											<li><a href="#">Người Mua Hàng</a></li>
+											<li><a href="#">Người Giao Hàng</a></li>
 										</ul>
 									</div>
 								</div>
 							</li>
 
-							<li><a href="#"><span class="glyphicon glyphicon-signal"></span> Link</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li>
+
+							<!-- nguoi giao hang -->
+							<li><a href="#"><span class="glyphicon glyphicon-send"></span>Đơn Hàng Mới</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-list-alt"></span>Đơn Hàng Của Tôi</a></li>
+							<!-- don hang cua toi bao gom don hang chua giao va da giao -->
+                            <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá Nhân</a></li>
 
 						</ul>
 					</div><!-- /.navbar-collapse -->
@@ -75,21 +65,9 @@
     </div>
   		<div class="col-md-10 content">
 	        <div>
-	        <div class="panel panel-primary">
+	        <div class="panel panel-light">
 	        <div class="panel-heading">
-	            <span class="glyphicon glyphicon-list"></span>Sortable Lists
-	            <div class="pull-right action-buttons">
-	                <div class="btn-group pull-right">
-	                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-	                        <span class="glyphicon glyphicon-cog" style="margin-right: 0px;"></span>
-	                    </button>
-	                    <ul class="dropdown-menu slidedown">
-	                        <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span>Edit</a></li>
-	                        <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-trash"></span>Delete</a></li>
-	                        <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-flag"></span>Flag</a></li>
-	                    </ul>
-	                </div>
-	            </div>
+	            <span class="glyphicon glyphicon-list"></span>Name Tab
 	        </div>
                 <div class="panel-body">
                 	<!-- table content -->
