--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,11 +3,6 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
-
-    <!-- <div class="avatar_edit">
-      <%= load_avatar @user %>
-      <a href="http://gravatar.com/emails" target="_blank">change</a>
-    </div> -->
+    <%= render 'form', user: @user %>
   </div>
 </div>
