--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,6 @@
 <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages', object: @user %>
   <!-- render option, render patial -->
-  <%= f.label :avatar %>
-  <%= f.file_field :avatar, class: 'form-control'%>
   
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
@@ -10,11 +8,23 @@
   <%= f.label :email %>
   <%= f.email_field :email, class: 'form-control' %>
 
+  <%= f.label :username %>
+  <%= f.text_field :username, class: 'form-control' %>
+
+  <%= f.label :address %>
+  <%= f.text_field :address, class: 'form-control' %>
+
+  <%= f.label :phone_number %>
+  <%= f.text_field :phone_number, class: 'form-control' %>
+
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar_url, accept: "image/jpeg,image/jpg,image/png" , class: 'form-control'%>
+
   <%= f.label :password %>
   <%= f.password_field :password, class: 'form-control' %>
 
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
-
+  <br>
   <%= f.submit value: 'Save', class: "btn btn-primary" %>
 <% end %>
