--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -8,7 +8,7 @@
 
     <div class="main">
 
-      <h3>Please Log In, or <a href="#">Sign Up</a></h3>
+      <h3>Please Log In, or <%= link_to "Sign up", signup_path %></h3>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
           <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
