--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,10 +40,9 @@
 
 		        <% if logged_in? %>
 		            <li class="dropdown">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @user.name %><b class="caret"></b></a>
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %><b class="caret"></b></a>
 			          <ul class="dropdown-menu">
-			          	
-			            <li><%= link_to "Edit Profile", edit_user_url %></li>
+			            <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
 			          </ul>
 			        </li>
 		            <li>
