mana cate & food

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -571,3 +571,17 @@ img {
   max-height: 240px;
   max-width: 240px;
 }
+
+.modal-lg {
+  width: 700px;
+  height: 400px;
+}
+
+.img_product {
+  max-height: 350px;
+  max-width: 350px;
+}
+
+.conf-height {
+  height: 20px;
+}
