--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,17 +1,19 @@
-<h3>admin page</h3>
+<h3>admin mana user</h3>
 
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9">
         <%= search_form_for [:admin,@search], html: {class: 'form-inline'} do |f| %>
           <%= f.label :name_or_email_or_phone_number_cont, 'Criteria',  class: 'col-md-2 text-center' %>
           <%= f.search_field :name_or_email_or_phone_number_cont, class: 'col-md-8 form-control', placeholder: 'name, email or phone' %>
           <%= f.submit 'search', :class => 'col-md-1 btn btn-primary' %>
         <% end %>
     </div>
-    <div class="col-md-2 text-right">
+    <div class="col-md-3 text-right">
        <%= link_to "create new", new_admin_user_path, class: "btn btn-primary btn-sm btn-create" %>
+       <%= link_to "export exel", new_admin_user_path, class: "btn btn-info btn-sm btn-create" %>
     </div>
 </div>
+
 <!-- <div>
   <p>lam muti select loc theo role</p>
 </div> -->
