--- a/app/views/layouts/_admin_footer.html.erb
+++ b/app/views/layouts/_admin_footer.html.erb
@@ -4,7 +4,7 @@
 	  <footer class="pull-left footer-admin">
 		<p class="col-md-12">
 			<hr class="divider">
-			Copyright &COPY; 2015 <a href="http://www.pingpong-labs.com">Gravitano</a>
+			Copyright &COPY; 2018 <a href="#">By Me</a>
 		</p>
 	  </footer>
     </nav>
