--- a/app/views/admin/foods/edit.html.erb
+++ b/app/views/admin/foods/edit.html.erb
@@ -11,6 +11,9 @@
       <%= f.label :img_url %>
       <%= f.file_field :img_url, accept: "image/jpeg,image/jpg,image/png" , class: 'form-control'%>
 
+      <%= f.label :food_category_id %>
+      <%= f.select :food_category_id, @foodcategories.collect { |p| [p.name, p.id] }, {}, { :class => 'form-group form-control' } %>
+
       <%= f.label :description %>
       <%= f.cktext_area :description, rows: 15 %>  
 
