--- a/app/views/admin/foods/new.html.erb
+++ b/app/views/admin/foods/new.html.erb
@@ -10,6 +10,9 @@
       
       <%= f.label :img_url %>
       <%= f.file_field :img_url, accept: "image/jpeg,image/jpg,image/png" , class: 'form-control'%>
+      
+      <%= f.label :food_category_id %>
+      <%= f.select :food_category_id, FoodCategory.all.collect { |p| [p.name, p.id] }, {}, { :class => 'form-group form-control' } %>
 
       <%= f.label :description %>
       <%= f.cktext_area :description, rows: 10 %>   
