--- a/app/views/admin/users/_modal_user.html.erb
+++ b/app/views/admin/users/_modal_user.html.erb
@@ -77,7 +77,7 @@
         </strong>
       </td>
       <td>
-        <%= @user.created_at if @user.created_at %>
+        <%= @user.created_at.strftime Settings.format_time_with_hour if @user.created_at %>
       </td>
     </tr>
   </tbody>
