--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <h2 style="text-align: center;">
+                        Review Your Shopping Cart
+                    </h2>
+                    <hr/>
             <table class="table table-hover">
                 <thead>
                     <tr>
