--- a/app/views/carts/payment.html.erb
+++ b/app/views/carts/payment.html.erb
@@ -3,7 +3,7 @@
     <div class='row' style='padding-top:25px; padding-bottom:25px;'>
         <div class='col-md-12'>
             <div id='mainContentWrapper'>
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-10 col-md-offset-1">
                     <h2 style="text-align: center;">
                         Review Your Order & Complete Checkout
                     </h2>
@@ -16,8 +16,8 @@
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Review
-                                                Your Order</a>
+                                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><b>Review
+                                                Your Order</b></a>
                                         </h4>
                                     </div>
                                     <div id="collapseOne" class="panel-collapse collapse in">
@@ -59,35 +59,20 @@
                                     
                                 </div>
                             </div>
+                            <!-- thong tin ng mua hang -->
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <div style="text-align: center; width:100%;"><a style="width:100%;"
-                                                                                        data-toggle="collapse"
-                                                                                        data-parent="#accordion"
-                                                                                        href="#collapseTwo"
-                                                                                        class=" btn btn-success"
-                                                                                        onclick="$(this).fadeOut(); $('#payInfo').fadeIn();">Continue
-                                            to Billing Information»</a></div>
-                                    </h4>
-                                </div>
-                            </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Contact
-                                            and Billing Information</a>
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><b>Contact
+                                            and Billing Information</b></a>
                                     </h4>
                                 </div>
                                 <div id="collapseTwo" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        <b>Help us keep your account safe and secure, please verify your billing
-                                            information.</b>
-                                        <br/><br/>
                                         <table class="table table-striped" style="font-weight: bold;">
                                             <tr>
                                                 <td style="width: 175px;">
-                                                    <label for="id_email">Best Email:</label></td>
+                                                    <label for="id_email">Name:</label></td>
                                                 <td>
                                                     <input class="form-control" id="id_email" name="email"
                                                            required="required" type="text"/>
@@ -95,7 +80,7 @@
                                             </tr>
                                             <tr>
                                                 <td style="width: 175px;">
-                                                    <label for="id_first_name">First name:</label></td>
+                                                    <label for="id_first_name">Email:</label></td>
                                                 <td>
                                                     <input class="form-control" id="id_first_name" name="first_name"
                                                            required="required" type="text"/>
@@ -103,7 +88,7 @@
                                             </tr>
                                             <tr>
                                                 <td style="width: 175px;">
-                                                    <label for="id_last_name">Last name:</label></td>
+                                                    <label for="id_last_name">Phone:</label></td>
                                                 <td>
                                                     <input class="form-control" id="id_last_name" name="last_name"
                                                            required="required" type="text"/>
@@ -117,114 +102,11 @@
                                                            name="address_line_1" required="required" type="text"/>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <td style="width: 175px;">
-                                                    <label for="id_address_line_2">Unit / Suite #:</label></td>
-                                                <td>
-                                                    <input class="form-control" id="id_address_line_2"
-                                                           name="address_line_2" type="text"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="width: 175px;">
-                                                    <label for="id_city">City:</label></td>
-                                                <td>
-                                                    <input class="form-control" id="id_city" name="city"
-                                                           required="required" type="text"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="width: 175px;">
-                                                    <label for="id_state">State:</label></td>
-                                                <td>
-                                                    <select class="form-control" id="id_state" name="state">
-                                                        <option value="AK">Alaska</option>
-                                                        <option value="AL">Alabama</option>
-                                                        <option value="AZ">Arizona</option>
-                                                        <option value="AR">Arkansas</option>
-                                                        <option value="CA">California</option>
-                                                        <option value="CO">Colorado</option>
-                                                        <option value="CT">Connecticut</option>
-                                                        <option value="DE">Delaware</option>
-                                                        <option value="FL">Florida</option>
-                                                        <option value="GA">Georgia</option>
-                                                        <option value="HI">Hawaii</option>
-                                                        <option value="ID">Idaho</option>
-                                                        <option value="IL">Illinois</option>
-                                                        <option value="IN">Indiana</option>
-                                                        <option value="IA">Iowa</option>
-                                                        <option value="KS">Kansas</option>
-                                                        <option value="KY">Kentucky</option>
-                                                        <option value="LA">Louisiana</option>
-                                                        <option value="ME">Maine</option>
-                                                        <option value="MD">Maryland</option>
-                                                        <option value="MA">Massachusetts</option>
-                                                        <option value="MI">Michigan</option>
-                                                        <option value="MN">Minnesota</option>
-                                                        <option value="MS">Mississippi</option>
-                                                        <option value="MO">Missouri</option>
-                                                        <option value="MT">Montana</option>
-                                                        <option value="NE">Nebraska</option>
-                                                        <option value="NV">Nevada</option>
-                                                        <option value="NH">New Hampshire</option>
-                                                        <option value="NJ">New Jersey</option>
-                                                        <option value="NM">New Mexico</option>
-                                                        <option value="NY">New York</option>
-                                                        <option value="NC">North Carolina</option>
-                                                        <option value="ND">North Dakota</option>
-                                                        <option value="OH">Ohio</option>
-                                                        <option value="OK">Oklahoma</option>
-                                                        <option value="OR">Oregon</option>
-                                                        <option value="PA">Pennsylvania</option>
-                                                        <option value="RI">Rhode Island</option>
-                                                        <option value="SC">South Carolina</option>
-                                                        <option value="SD">South Dakota</option>
-                                                        <option value="TN">Tennessee</option>
-                                                        <option value="TX">Texas</option>
-                                                        <option value="UT">Utah</option>
-                                                        <option value="VT">Vermont</option>
-                                                        <option value="VA">Virginia</option>
-                                                        <option value="WA">Washington</option>
-                                                        <option value="DC">Washington D.C.</option>
-                                                        <option value="WV">West Virginia</option>
-                                                        <option value="WI">Wisconsin</option>
-                                                        <option value="WY">Wyoming</option>
-                                                    </select>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="width: 175px;">
-                                                    <label for="id_postalcode">Postalcode:</label></td>
-                                                <td>
-                                                    <input class="form-control" id="id_postalcode" name="postalcode"
-                                                           required="required" type="text"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="width: 175px;">
-                                                    <label for="id_phone">Phone:</label></td>
-                                                <td>
-                                                    <input class="form-control" id="id_phone" name="phone" type="text"/>
-                                                </td>
-                                            </tr>
-
                                         </table>
                                     </div>
                                 </div>
                             </div>
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">
-                                        <div style="text-align: center;"><a data-toggle="collapse"
-                                                                            data-parent="#accordion"
-                                                                            href="#collapseThree"
-                                                                            class=" btn   btn-success" id="payInfo"
-                                                                            style="width:100%;display: none;" onclick="$(this).fadeOut();  
-                   document.getElementById('collapseThree').scrollIntoView()">Enter Payment Information »</a>
-                                        </div>
-                                    </h4>
-                                </div>
-                            </div>
+                            
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
@@ -324,11 +206,13 @@
                                     </div>
                                 </div>
                             </div>
+                        </form>
                     </div>
                 </div>
-                </form>
+                
             </div>
         </div>
     </div>
+</div>
 
 
