--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,9 +42,14 @@
 		            <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %><b class="caret"></b></a>
 			          <ul class="dropdown-menu">
+			          	<li><%= link_to "Profile", user_path(current_user) %></li>
 			            <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+			            <% if current_user.Admin? %>
+			              <li><%= link_to "Visit Dashboard", admin_root_path(current_user) %></li>
+			            <% end %>
 			          </ul>
 			        </li>
+
 		            <li>
 		              <%= link_to logout_path, method: :delete do %>
 		               <%= t "views.layouts.logout" %>
