--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -596,3 +596,12 @@ img {
   height: 300px !important;
   width: 500px !important;
 }
+
+.modal-lg-1 {
+  margin-left: -300px !important;
+}
+
+.user_avatar {
+  height: 70px;
+  width: 70px;
+}
