--- a/app/views/admin/foods/new.html.erb
+++ b/app/views/admin/foods/new.html.erb
@@ -7,6 +7,9 @@
 
       <%= f.label :price %>
       <%= f.text_field :price, class: 'form-control' %>
+
+      <%= f.label :discount %>
+      <%= f.text_field :discount, class: 'form-control' %>
       
       <%= f.label :img_url %>
       <%= f.file_field :img_url, accept: "image/jpeg,image/jpg,image/png" , class: 'form-control'%>
